@@ -49,21 +49,20 @@
 	</build>
 	<profiles>
 		<profile>
-			<id>java9</id>
+			<id>java11+</id>
 			<activation>
-				<jdk>[9,)</jdk>
+				<jdk>[11,)</jdk>
 			</activation>
-			<build>
-				<plugins>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-surefire-plugin</artifactId>
-						<configuration>
-							<argLine>--add-modules java.base,java.xml.ws</argLine>
-						</configuration>
-					</plugin>
-				</plugins>
-			</build>
+			<dependencies>
+				<dependency>
+					<groupId>javax.activation</groupId>
+					<artifactId>javax.activation-api</artifactId>
+				</dependency>
+				<dependency>
+					<groupId>org.glassfish.jaxb</groupId>
+					<artifactId>jaxb-runtime</artifactId>
+				</dependency>
+			</dependencies>
 		</profile>
 	</profiles>
 </project>
